style: fix alignment of form and button

--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,8 +1,7 @@
 .Form {
   height: 100%;
   width: 38%;
-  padding: 48px; /* 0.5 inch margins */
-  padding-left: 0;
+  padding: 48px 0;
 }
 
 .btn {
@@ -10,7 +9,7 @@
   background-color: var(--surface);
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 92%;
   height: 2.5rem;
   gap: 1rem;
   font-size: 1.5rem;
@@ -19,6 +18,7 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.6);
   cursor: pointer;
   transition: all ease-in 0.1s;
+  margin-bottom: 1rem;
 }
 
 .btn:hover {
